tests/snapshots/serde__de_date.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Date(1)"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: Date {
        time_since_epoch: 1.0,
    },
}

