tests/snapshots/serde__de_date_min.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Date(-8640000000000000)"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: Date {
        time_since_epoch: -8640000000000000.0,
    },
}

