tests/snapshots/serde__de_dense_array_circular_self.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nconst arr = [undefined]; arr[0] = arr; arr"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: DenseArray [
        HeapReference(
            *0,
        ),
    ] {},
}

