tests/snapshots/serde__de_dense_array_empty.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\n[]"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: DenseArray [] {},
}

