tests/snapshots/serde__de_dense_array_one_element.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\n[1]"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: DenseArray [
        I32(
            1,
        ),
    ] {},
}

