tests/snapshots/serde__de_dense_array_with_object.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\n[1, { a: true }]"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: DenseArray [
        I32(
            1,
        ),
        HeapReference(
            *1,
        ),
    ] {},
    1: Object {
        OneByte("a"): Bool(
            true,
        ),
    },
}

